# wealthsimple-python

./: .gitignore  README.md  interactive_trade.py  pyproject.toml  test_sub.py  wealthsimple_v2.py
.github/workflows/: publish.yml
wealthsimple_python/: __init__.py  client.py  constants.py  helpers.py  subscriptions.py  totp.py
