[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wealthsimple-python"
version = "2.0.0"
description = "Unofficial Python client for the Wealthsimple GraphQL API"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Henry Huang" },
]
keywords = ["wealthsimple", "trading", "graphql", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/henryhuangh/wealthsimple-python"
Repository = "https://github.com/henryhuangh/wealthsimple-python"
Issues = "https://github.com/henryhuangh/wealthsimple-python/issues"

[project.optional-dependencies]
keyring = ["keyring"]
websockets = ["websockets"]
all = ["keyring", "websockets"]

[tool.setuptools.packages.find]
include = ["wealthsimple_python*"]

[tool.setuptools.package-data]
wealthsimple_python = ["py.typed"]
